--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -14,15 +14,24 @@
     max_xsize: 10.0
     max_ysize: 10.0
     max_area: 20.0
-    save_name: blobs_cam3
+    save_name: None
+
 - matching:
     blob_files: blobs_cam1, blobs_cam2, blobs_cam3
     N_frames: None
     camera_names: cam1, cam2, cam3
     cam_resolution: 1280, 1024
     ROI: 0.0, 70.0, 0.0, 70.0, -25.0, 15.0
-    voxel_size: 2.0
+    voxel_size: 10.0
     max_blob_distance: 1.0
     max_err: 0.2
     save_name: particles
+
+- tracking:
+    particles_file_name: particles
+    N_frames: None
+    d_max: 1.0
+    dv_max: 1.0
+    save_name: trajectories
+    
 
