--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           working_directory: user_manual
-          root_file: user_manual/user_manual.tex
+          root_file: user_manual.tex
