--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,8 @@ jobs:
         with:
           working_directory: user_manual
           root_file: user_manual.tex
+      - name: Release PDF
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: user_manual/user_manual.pdf
