updating the calibration gui, the workflow and param files and the manual

--- a/legacy/from_V0.4/params_file.yml
+++ b/legacy/from_V0.4/params_file.yml
@@ -1,8 +1,10 @@
 - calibration:
     camera_name: cam1
-    resolution: 1280, 1024
-    calibration_image: ./Calibration/cal1.tif
+    calibration_points_file: ./Calibration/cal_points1_full
     target_file: ./Calibration/target_file
+    segmented_points_file: ./Calibration/cal_blobs_1
+    calibration_image: ./Calibration/cal1.tif
+    resolution: 1280, 1024
 
 - segmentation:
     Number_of_images: None
