calibration with particles is now done with the calibration GUI

--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -54,7 +54,8 @@
     cam_number: 1 
     blobs_fname: 'blobs_cam1'
     min_traj_len: 4
-    max_point_number: 200
+    max_point_number: 1000
+    target_file: ./Calibration/target_file
 
 - smoothing:
     trajectory_file: trajectories
