--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -61,6 +61,7 @@
     trajectory_file: trajectories
     window_size: 5
     polynom_order: 3
+    repetitions: 5
     save_name: smoothed_trajectories
 
 - stitching:
