--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -82,4 +82,7 @@
     dv_max: 1.0
     save_name: trajectories_2D
     
-
+- run_extension:
+    path_to_extention: the_absolute_path_to_the_script_containing_the_code 
+    action_name: the_name_of_the_class_that_needs_to_run  
+    extention_params_file: the_path_to_the_extentions_params_file
