--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -45,6 +45,7 @@
     N_frames: None
     d_max: 1.0
     dv_max: 1.0
+    mean_flow: [0.0, 0.0, 0.0]
     save_name: trajectories
 
 - calibration_with_particles:
