--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -83,6 +83,10 @@
     dv_max: 1.0
     save_name: trajectories_2D
     
+- manual_matching_GUI:
+    cameras: [cam1, cam2, cam3]
+    images: [./Images_cam1/01.tif, ./Images_cam2/01.tif, ./Images_cam3/01.tif]
+    
 - run_extension:
     path_to_extention: the_absolute_path_to_the_script_containing_the_code 
     action_name: the_name_of_the_class_that_needs_to_run  
