--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -10,6 +10,7 @@
     images_folder: Images_cam1
     single_image_name: cal2.tif
     image_extension: '.tif'
+    shape: particles
     mask: 1.0
     ROI: 227, 1050, 120, 920
     plot_result: True
@@ -24,7 +25,7 @@
     max_ysize: 15.0
     max_mass: None
     method: labeling
-    particle_size: 8
+    particle_size: 8  
     save_name: test
 
 - matching:
@@ -73,7 +74,6 @@
     max_distance: 0.4
     save_name: trajecotries_stitched
 
-
 - 2D_tracking:
     blob_file: blobs_cam1
     frame_start: 0
@@ -85,14 +85,11 @@
     dv_max: 1.0
     save_name: trajectories_2D
 
-    
 - manual_matching_GUI:
     cameras: [cam1, cam2, cam3]
     images: [./Images_cam1/01.tif, ./Images_cam2/01.tif, ./Images_cam3/01.tif]
 
-
-# This is for fiber orientations, developed by Eric Aschari
-- orientations:
+- fiber_orientations:
     camera_names: cam1, cam2
     cam_resolution: 1248, 1248
     blob_files: blobs_cam1_direction, blobs_cam2_direction
@@ -100,9 +97,8 @@
     trajectory_file: trajectories
     save_name: fiber_orientations
     
-
-# Future preparation for adding external functionalities
 - run_extension:
     path_to_extention: the_absolute_path_to_the_script_containing_the_code 
     action_name: the_name_of_the_class_that_needs_to_run  
     extention_params_file: the_path_to_the_extentions_params_file
+
