--- a/example/params_file.yml
+++ b/example/params_file.yml
@@ -112,6 +112,14 @@
     t0: 0
     te: -1
 
+- animate_trajectories:
+    file_name: smoothed_trajectories
+    min_length: 2 
+    f_start: None
+    f_end: None
+    fps: 25
+    tail_length: 3
+
 - run_extension:
     path_to_extention: the_absolute_path_to_the_script_containing_the_code 
     action_name: the_name_of_the_class_that_needs_to_run  
